--- a/src/main/resources/templates/students/student-update.html
+++ b/src/main/resources/templates/students/student-update.html
@@ -349,47 +349,46 @@
                         <div class="col-md-4">
                           <label class="form-label">日本渡航経験</label>
                           <select class="form-select" th:field="*{japanTravelExperience}">
-                            <option value="" disabled selected hidden>選択してください</option>
+                            <option value="" disabled selected hidden>選択してください</option>                            
                             <option value="true">ある</option>
                             <option value="false">ない</option>
                           </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('japanTravelExperience')}"
-                            th:errors="*{japanTravelExperience}"></div>
+                          <div class="text-danger" th:if="${#fields.hasErrors('japanTravelExperience')}" th:errors="*{japanTravelExperience}"></div>
                         </div>
 
                         <div class="col-md-4">
                           <label class="form-label">COE申請経験</label>
                           <select class="form-select" th:field="*{coeApplicationExperience}">
-                            <option value="" disabled selected hidden>選択してください</option>
+                            <option value="" disabled selected hidden>選択してください</option>                            
                             <option value="true">ある</option>
                             <option value="false">ない</option>
                           </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('coeApplicationExperience')}"
-                            th:errors="*{coeApplicationExperience}"></div>
+                          <div class="text-danger" th:if="${#fields.hasErrors('coeApplicationExperience')}" th:errors="*{coeApplicationExperience}"></div>
                         </div>
 
-                        <div class="col-md-4">
-                          <label class="form-label">寮があれば入りたい</label>
-                          <select class="form-select" th:field="*{hostelPreference}">
-                            <option value="" disabled selected hidden>選択してください</option>
-                            <option value="true">はい</option>
-                            <option value="false">いいえ</option>
-                          </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('hostelPreference')}"
-                            th:errors="*{hostelPreference}"></div>
-                        </div>
+<div class="col-md-4">
+  <label class="form-label">寮があれば入りたい</label>
+  <select class="form-select select-placeholder" th:field="*{hostelPreference}">
+<option th:value="''" th:if="${student.hostelPreference == null or student.hostelPreference == ''}">
+                                  選択してください </option>
+    <option value="true">はい</option>
+    <option value="false">いいえ</option>
+  </select>
+  <div class="text-danger" th:if="${#fields.hasErrors('hostelPreference')}" th:errors="*{hostelPreference}"></div>
+</div>
                         <div></div>
 
-                        <div class="col-md-4">
-                          <label class="form-label">お酒</label>
-                          <select class="form-select" th:field="*{isAlcoholDrink}">
-                            <option value="" disabled selected hidden>選択してください</option>
-                            <option th:value="true">飲む</option>
-                            <option th:value="false">飲まない</option>
-                          </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('isAlcoholDrink')}"
+<div class="col-md-4">
+  <label class="form-label">お酒</label>
+  <select class="form-select select-placeholder" th:field="*{isAlcoholDrink}">
+<option th:value="''" th:if="${student.isAlcoholDrink == null or student.isAlcoholDrink == ''}">
+                                  選択してください </option>
+    <option th:value="true">飲む</option>
+    <option th:value="false">飲まない</option>
+  </select>
+  <div class="text-danger" th:if="${#fields.hasErrors('isAlcoholDrink')}"
                             th:errors="*{isAlcoholDrink}"></div>
-                        </div>
+</div>
 
                         <div class="col-md-4">
                           <label class="form-label">タバコ</label>
@@ -398,8 +397,7 @@
                             <option th:value="true">吸う</option>
                             <option th:value="false">吸わない</option>
                           </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('isSmoking')}" th:errors="*{isSmoking}">
-                          </div>
+                          <div class="text-danger" th:if="${#fields.hasErrors('isSmoking')}" th:errors="*{isSmoking}"></div>
                         </div>
 
                         <div class="col-md-4">
@@ -409,8 +407,7 @@
                             <option th:value="true">ある</option>
                             <option th:value="false">ない</option>
                           </select>
-                          <div class="text-danger" th:if="${#fields.hasErrors('haveTatto')}" th:errors="*{haveTatto}">
-                          </div>
+                          <div class="text-danger" th:if="${#fields.hasErrors('haveTatto')}" th:errors="*{haveTatto}"></div>
                         </div>
                         <div></div>
 
