add 明細 title in detail icon

--- a/src/main/resources/templates/students/student-list.html
+++ b/src/main/resources/templates/students/student-list.html
@@ -979,7 +979,7 @@
                           class="action-icon detail"
                           title="明細"
                         >
-                          <i class="bi bi-info-circle-fill"></i>
+                          <i class="bi bi-info-circle-fill"></i> 明細
                         </a>
                         <a
                           href="#"
