Req Field Adjust 2

--- a/src/main/resources/templates/students/student-update.html
+++ b/src/main/resources/templates/students/student-update.html
@@ -420,12 +420,12 @@
                         <div></div>
 
                         <div class="col-md-4">
-                          <label class="form-label required-label">学校登録日</label>
+                          <label class="form-label">学校登録日</label>
                           <input type="date" class="form-control" th:field="*{enrolledDate}" />
                         </div>
 
                         <div class="col-md-4">
-                          <label class="form-label required-label">授業料支払予定日</label>
+                          <label class="form-label">授業料支払予定日</label>
                           <input type="date" class="form-control" th:field="*{schedulePaymentTutionDate}" />
                         </div>
 
